--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 # OpenAI API Key
+# Get your key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Anthropic API Key (optional)
+# Get your key from: https://console.anthropic.com/account/keys
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# AI Service Configuration
+USE_AI_REVIEW=false  # Set to 'true' to enable real AI reviews, 'false' for placeholder responses
+DEFAULT_AI_PROVIDER=openai  # Options: openai, anthropic
+DEFAULT_AI_MODEL=gpt-4-turbo  # For OpenAI: gpt-4-turbo, gpt-3.5-turbo; For Anthropic: claude-3-5-sonnet-20241022
 
 # Application Settings
 DEFAULT_PERSONA=beginner
